# walk-jump

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  index.html  pyproject.toml
.github/workflows/: ci.yml  push_main.yml
scripts/: install.sh  lint.sh
src/walkjump/cmdline/: _sample.py  utils.py
src/walkjump/conformity/: README.md  __init__.py  _conformity_score.py
src/walkjump/data/: _batch.py
src/walkjump/hydra_config/: sample.yaml
src/walkjump/hydra_config/callbacks/: base.yaml
src/walkjump/hydra_config/logger/: wandb.yaml
src/walkjump/hydra_config/model/: denoise.yaml  noise_ebm.yaml
src/walkjump/hydra_config/model/model_cfg/arch/: bytenet.yaml
src/walkjump/hydra_config/model/model_cfg/hyperparameters/: default.yaml  denoise_hp.yaml  noise_ebm_hp.yaml
src/walkjump/hydra_config/model/model_cfg/pretrained/: default.yaml
src/walkjump/hydra_config/model/model_cfg/sampler/: default.yaml
src/walkjump/hydra_config/setup/seed/: default.yaml
src/walkjump/metrics/: __init__.py  _descriptors.py  _get_batch_descriptors.py  _large_molecule_descriptors.py
src/walkjump/sampling/: _langevin.py  _walkjump.py
static/css/: bulma-carousel.min.css  bulma-slider.min.css  index.css
static/js/: bulma-carousel.min.js  bulma-slider.min.js  fontawesome.all.min.js  index.js
tests/: constants.py  fixtures.py  test_commands.py  test_conformity.py  test_dataset.py  test_get_batch_descriptors.py  test_large_molecule_descriptors.py  test_sampling.py  test_tokenization.py
